name:                velvet-scraper
version:             0.1.0.0
synopsis:            Quick summaries from Velvet Optimiser logs.
description:         Quick summaries from Velvet Optimiser logs.
homepage:            http://github.com/jtobin/velvet-scraper
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Velvet.Scraper
    , Velvet.Scraper.Parser
  default-language:    Haskell2010
  build-depends:
      attoparsec
    , bytestring
    , base
    , cassava
    , containers
    , text
    , unordered-containers
    , vector

executable velvet-scraper
  Main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options: -Wall -O2
  build-depends:
      base
    , attoparsec
    , bytestring
    , cassava
    , velvet-scraper == 0.1.0.0
    , text
    , vector

